fix bug on shapefile uploader on firefox

--- a/flask_project/campaign_manager/static/css/map-campaigner.css
+++ b/flask_project/campaign_manager/static/css/map-campaigner.css
@@ -774,3 +774,7 @@ body {
 .info .pull-right {
     margin-left: 10px !important;
 }
+
+.add-file.btn {
+    width: 50%;
+}
